<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="Registrarse">Registrarse</string>
    <string name="Olvidastetucontraseña">Olvidaste tu contraseña?</string>
    <string name="title_activity_agendatuclase">Agendar clases</string>
    <string name="title_activity_registro">Registro</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">MyProfe</string>
    <string name="RegistroTitle">Registro</string>
    <string name="Quieres_ser_alumno">Quieres ser alumno?</string>
    <string name="Quieres_ser_profesor">Quieres ser profesor?</string>
    <string name="Si">Si</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="Email">Email</string>
    <string name="Celular">Celular</string>
    <string name="Comuna">Comuna</string>
    <string name="Clave">Clave</string>
    <string name="Género">Género</string>
    <string name="Masculino">Masculino</string>
    <string name="Femenino">Femenino</string>
    <string name="Fecha">Fecha</string>
    <string name="Enviar">Enviar</string>
    <string name="Resetear">Resetear</string>
    <string name="title_activity_my">Registro</string>
    <string name="n1">Tus clases agendadas</string>
    <string name="title_activity_buscar">Búsqueda</string>
    <string name="n2">Buscar</string>
    <string name="n3">Profesores</string>
    <string name="n4">Alumnos</string>
    <string name="n5">Salir</string>
    <string name="title_activity_lista_profe">Lista Profesores</string>
    <string name="title_activity_prueba">Prueba</string>
    <string name="title_activity_notificaciones">Notificaciones</string>
    <string name="Ajustes">Ajustes</string>
    <string name="Buscar">Buscar/Ofrecer</string>
    <string name="Perfil">Perfil</string>
    <string name="MyClases">Agenda de Clases</string>
    <string name="Notificaciones">Notificaciones</string>
    <string name="title_activity_mensajes">Mensajes</string>
    <string name="Nombre_Profesor">Nombre:</string>
    <string name="Institucion_Profesor">Institución:</string>
    <string name="Valoracion_Profesor">Valoración:</string>
    <string name="Informacion_Perfil_Profesor">Informacion de mi profesor</string>
    <string name="Enviar_Mensaje">Enviar Mensaje</string>
    <string name="Foto_de_Perfil">Foto de Perfil</string>
    <string name="title_activity_perfil_profesor">Perfil</string>
    <string name="title_activity_prueba_perfil">PruebaPerfil</string>
    <string name="title_activity_my_perfil">Mi Perfil</string>
    <string name="Declarar_Horario">Ser Profesor o Alumno</string>
    <string name="Declarar_Materia">Declarar Materia</string>
    <string name="Cambiar_Contraseña">Cambiar Contraseña</string>
    <string name="title_activity_menu">Menú</string>
    <string name="title_activity_perfilprofesor">Perfil Profesor</string>
    <string name="title_activity_menus">Menú</string>
    <string name="title_activity_aa">aa</string>
    <string name="title_activity_filtros">Filtros</string>
    <string name="title_activity_asignatura">Asignatura</string>
    <string name="queclases">Que clases doy</string>
    <string name="fisica">Física</string>
    <string name="fisicaa">Física</string>
    <string name="title_activity_precio">Precio</string>
    <string name="title_activity_lista_alumno">Lista Alumnos</string>
    <string name="Salir">Salir</string>
    <string name="Nome">Large Text</string>
    <string name="Apelido">Large Text</string>
    <string name="Clave1">Reingresar clave</string>
    <string name="quequieresser">¿Quieres ser Profesor o Alumno?</string>
    <string name="serprofe">Profesor</string>
    <string name="seralumno">Alumno</string>
    <string name="title_activity_calidadusuarios">calidadusuarios</string>

</resources>
