<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <GridLayout android:id="@+id/TableLayout01"
        android:layout_width="match_parent" android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">


        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Quieres_ser_alumno"
        android:id="@+id/pregunta1"
        android:layout_row="1"
        android:layout_column="0" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Si"
        android:id="@+id/checkBox"
        android:layout_row="1"
        android:layout_column="4"
        android:checked="false" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Quieres_ser_profesor"
        android:id="@+id/pregunta2"
        android:layout_row="2"
        android:layout_column="0" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Si"
        android:id="@+id/checkBox2"
        android:layout_row="2"
        android:layout_column="4"
        android:checked="false" />

    <TextView android:id="@+id/TextoNombre"
        android:text="@string/Nombre"
        android:width="100dp"
        android:layout_row="3"
        android:layout_column="0"/>
    <EditText android:id="@+id/EditTextNombre"
        android:inputType="text"
        android:width="200dp"
        android:layout_row="3"
        android:layout_column="4" />

    <TextView android:id="@+id/TextoApellido"
        android:text="@string/Apellido"
        android:inputType="text"
        android:layout_row="4"
        android:layout_column="0"/>

    <EditText android:id="@+id/EditTextApellido"
        android:layout_row="4"
        android:layout_column="4"
        android:inputType="text"
        android:width="200dp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:id="@+id/textoEmail"
        android:layout_row="5"
        android:layout_column="0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:width="200dp"
        android:id="@+id/EditTextEmail"
        android:layout_row="5"
        android:layout_column="4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Celular"
        android:id="@+id/textoCelular"
        android:layout_row="6"
        android:layout_column="0"  />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextCelular"
        android:width="200dp"
        android:layout_row="6"
        android:layout_column="4"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Comuna"
        android:id="@+id/textoComuna"
        android:layout_row="7"
        android:layout_column="0" />

    <Spinner
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner3"
        android:layout_row="7"
        android:layout_column="4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Clave"
        android:id="@+id/textoClave"
        android:layout_row="8"
        android:layout_column="0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/editTextClave"
        android:width="200dp"
        android:layout_row="8"
        android:layout_column="4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Clave1"
            android:id="@+id/textoClave"
            android:layout_row="9"
            android:layout_column="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/editTextClave1"
            android:width="200dp"
            android:layout_row="9"
            android:layout_column="4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Fecha"
        android:id="@+id/textoFecha"
        android:layout_row="10"
        android:layout_column="0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:width="200dp"
        android:id="@+id/editTextFecha"
        android:layout_row="10"
        android:layout_column="4" />


    <Button android:id="@+id/ButtonEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="11"
        android:layout_column="4"
        android:text="@string/Enviar"
        style="@style/fondo"/>

     <Button android:id="@+id/ButtonResetear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="12"
            android:layout_column="4"
            android:text="@string/Resetear"
            style="@style/fondo"/>

    </GridLayout>

</ScrollView>