<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/quequieresser"
    android:focusable="true"
    android:background="@drawable/linedpaper">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/quequieresser"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serprofe"
        android:id="@+id/serprofe"
        android:layout_above="@+id/seralumno"
        android:layout_alignLeft="@+id/seralumno"
        android:layout_alignStart="@+id/seralumno"
        android:layout_marginBottom="30dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seralumno"
        android:id="@+id/seralumno"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/volver2"
        android:layout_alignStart="@+id/volver2" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Volver al Menú"
        android:id="@+id/volver2"
        android:layout_below="@+id/seralumno"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        style="@style/fondo"/>

</RelativeLayout>
