<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.android.proyectobotones.MyPerfil"
    android:background="@drawable/linedpaper"
    android:focusable="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_my_perfil"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp" />

    <Button
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@string/Declarar_Horario"
        android:id="@+id/cambiarcalidad"
        style="bold"
        android:layout_alignWithParentIfMissing="false"
        android:layout_above="@+id/contraseña"
        android:layout_alignLeft="@+id/contraseña"
        android:layout_alignStart="@+id/contraseña" />

    <Button
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@string/Declarar_Materia"
        android:id="@+id/contraseña"
        style="bold"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="Fijar Precio"
        android:id="@+id/Precio"
        style="bold"
        android:layout_below="@+id/contraseña"
        android:layout_alignLeft="@+id/contraseña"
        android:layout_alignStart="@+id/contraseña" />
</RelativeLayout>
