<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.mymodule.app2.Buscar"
    android:focusable="true"
    android:background="@drawable/linedpaper">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n3"
            android:onClick="pasar"
            android:id="@+id/contraseña"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            style="bold"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n4"
            android:id="@+id/button23"
            android:layout_gravity="center_horizontal"
            android:layout_toEndOf="@+id/contraseña"
            android:layout_below="@+id/contraseña"
            android:layout_alignLeft="@+id/contraseña"
            android:layout_alignStart="@+id/contraseña"
            android:layout_marginTop="129dp"
            android:layout_alignRight="@+id/contraseña"
            android:layout_alignEnd="@+id/contraseña"
            android:onClick="pasar1"
            style="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/n2"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</LinearLayout>

